Implement class ObjectHelper

--- a/src/object-tracking-manipulation/CMakeLists.txt
+++ b/src/object-tracking-manipulation/CMakeLists.txt
@@ -20,10 +20,12 @@ list(APPEND CMAKE_MODULE_PATH ${ICUB_MODULE_PATH})
 
 set(${EXE_TARGET_NAME}_HDR
     include/ArmController.h
+    include/ObjectHelper.h
     )
 
 set(${EXE_TARGET_NAME}_SRC
     src/ArmController.cpp
+    src/ObjectHelper.cpp
     src/main.cpp
     )
 
