--- a/src/object-tracking-manipulation/CMakeLists.txt
+++ b/src/object-tracking-manipulation/CMakeLists.txt
@@ -68,6 +68,7 @@ endif()
 set(${EXE_TARGET_NAME}_CONF
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/manipulation_config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/object_helper_config.ini
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/hand_sequences.ini
     )
 
 yarp_install(FILES ${${EXE_TARGET_NAME}_CONF}                           DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking)
