Install springy fingers configuration files in object-tracking-manipulation context path within src/object-tracking-manipulation/CMakeLists.txt

--- a/src/object-tracking-manipulation/CMakeLists.txt
+++ b/src/object-tracking-manipulation/CMakeLists.txt
@@ -69,6 +69,8 @@ set(${EXE_TARGET_NAME}_CONF
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/manipulation_config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/object_helper_config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/hand_sequences.ini
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/springy_calibration_left.ini
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/springy_calibration_right.ini
     )
 
 yarp_install(FILES ${${EXE_TARGET_NAME}_CONF}                           DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking-manipulation)
