Change default configuration file of module object-tracking-manipulation

--- a/src/object-tracking-manipulation/conf/manipulation_config.ini
+++ b/src/object-tracking-manipulation/conf/manipulation_config.ini
@@ -10,9 +10,14 @@ max_torso_pitch         25.0
 limit_torso_yaw         true
 max_torso_yaw           25.0
 
-default_traj_time       4.0
-default_shift_time      2.0
+default_traj_time       3.0
+default_shift_time      1.5
+default_following_time  1.5
 hand_shift              0.025
+traj_scale              0.07
+traj_time_scale         0.6
+traj_center_z_offset    0.1
+invert_traj_orientation false
 
 hand_move_timeout       7.0
 hand_home_timeout       7.0
