Implement class SinusoidalTrajectory

--- a/src/object-tracking-manipulation/CMakeLists.txt
+++ b/src/object-tracking-manipulation/CMakeLists.txt
@@ -22,6 +22,7 @@ set(${EXE_TARGET_NAME}_HDR
     include/ArmController.h
     include/LemniscateGenerator.h
     include/ObjectHelper.h
+    include/SinusoidalTrajectory.h
     include/TrajectoryGenerator.h
     )
 
@@ -29,6 +30,7 @@ set(${EXE_TARGET_NAME}_SRC
     src/ArmController.cpp
     src/LemniscateGenerator.cpp
     src/ObjectHelper.cpp
+    src/SinusoidalTrajectory.cpp
     src/main.cpp
     )
 
