--- a/src/object-tracking-manipulation/conf/manipulation_config.ini
+++ b/src/object-tracking-manipulation/conf/manipulation_config.ini
@@ -18,6 +18,8 @@ traj_scale              0.07
 traj_time_scale         0.6
 traj_center_z_offset    0.1
 invert_traj_orientation false
+angle_traj_time_scale   (0.6, 0.6, 0.6)
+angle_traj_scale        (0.7, 0.7, 0.7)
 
 hand_move_timeout       7.0
 hand_home_timeout       7.0
