--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -79,6 +79,7 @@ v_stride            2
 [HAND_OCCLUSION]
 handle_occlusion    true
 laterality          right
+hull_scale          1.2
 
 [HAND_CONTACTS]
 handle_contacts     true
