Change default configuration file of module object-trackint
Extend the parameters 'center_0' and 'radius_0' in order to consider the orientation of the object

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -39,8 +39,8 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 
 # Used in UPF to initialized the state randomly
-center_0            (0.0, 0.0, 0.0)
-radius_0            (0.4, 0.4, 0.4)
+center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
+radius_0            (0.4, 0.4, 0.4, M_PI, M_PI, M_PI)
 
 [KINEMATIC_MODEL]
 # for ukf
