--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -45,7 +45,9 @@ radius_0            (0.4, 0.4, 0.4, M_PI, M_PI, M_PI)
 [KINEMATIC_MODEL]
 q_x                 (0.03, 0.03, 0.03)
 q_eul               (0.09, 0.09, 0.09)
-
+use_tdd_occlusion   true
+tdd_max_seconds     3.0
+tdd_exp_gain        1.5
 
 [MEASUREMENT_MODEL]
 noise_covariance    (0.01, 0.01, 0.01)
