Fix wrong values in parameters INITIAL_CONDITION/radius_0 in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -40,7 +40,7 @@ cov_eul_dot_0       (0.01, 0.01, 0.01)
 
 # Used in UPF to initialized the state randomly
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
-radius_0            (0.4, 0.4, 0.4, M_PI, M_PI, M_PI)
+radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
 
 [KINEMATIC_MODEL]
 q_x                 (0.03, 0.03, 0.03)
