--- a/src/object-tracking-viewer/conf/config.ini
+++ b/src/object-tracking-viewer/conf/config.ini
@@ -1,4 +1,5 @@
-period          0.03
-pc_left_z_thr   1.0
-show_hand       true
-hand_laterality right
+period            0.03
+pc_left_z_thr     1.0
+show_hand         true
+hand_laterality   right
+show_ground_truth true
