Update marker offset for object ycb_mustard_bottle

--- a/src/object-tracking-ground-truth/conf/marker_offsets.ini
+++ b/src/object-tracking-ground-truth/conf/marker_offsets.ini
@@ -1,2 +1,5 @@
 [ycb_mustard_bottle]
-offset  (0.0, -0.027, 0.0, 1.5707963267948966, 3.141592653589793, 0.0)
+marker_ids   (39, 18)
+marker_sizes (0.04, 0.03)
+offset0  (0.0, -0.027, 0.0, 1.5707963267948966, 3.141592653589793, 0.0)
+offset1  (0.0, 0.0, -0.111, 0.0, 0.0, 0.0)
