--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -112,6 +112,7 @@ object_name         ycb_mustard_bottle
 iol_object_name     Bottle
 iol_bbox_scale      1.3
 use_bbox_0          false
+use_bbox_port       false
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
 bbox_tl_0           (160.0, 100.0)
