Implement module object-tracking-logger

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,11 @@ add_subdirectory(sfm-library)
 add_subdirectory(object-tracking-depth)
 add_subdirectory(object-tracking)
 
+option(BUILD_OBJECT_TRACKING_LOGGER "Build object-tracking-logger" OFF)
+if (BUILD_OBJECT_TRACKING_LOGGER)
+  add_subdirectory(object-tracking-logger)
+endif()
+
 option(BUILD_OBJECT_TRACKING_GROUND_TRUTH "Build object-tracking-ground-truth" OFF)
 if (BUILD_OBJECT_TRACKING_GROUND_TRUTH)
   add_subdirectory(object-tracking-ground-truth)
