Change configuration for object 'ycb_sugar_box' in configuration file used within class ObjectHelper

--- a/src/object-tracking-manipulation/conf/object_helper_config.ini
+++ b/src/object-tracking-manipulation/conf/object_helper_config.ini
@@ -2,3 +2,8 @@
 right_approach_pose              (0.0446, -0.04, 0.02, 45.0, 0.0, 0.0)
 right_coarse_approach_offset     (0.0, 0.05, 0.0)
 right_precise_approach_direction (-0.02, -0.05, 0.0)
+
+[ycb_sugar_box]
+right_approach_pose              (0.0446, -0.02, 0.02, 45.0, 0.0, 0.0)
+right_coarse_approach_offset     (0.0, 0.05, 0.0)
+right_precise_approach_direction (0.0, -0.05, 0.0)
