--- a/src/object-tracking-manipulation/conf/object_helper_config.ini
+++ b/src/object-tracking-manipulation/conf/object_helper_config.ini
@@ -7,3 +7,13 @@ right_precise_approach_direction (-0.02, -0.05, 0.0)
 right_approach_pose              (0.0446, -0.02, 0.02, 45.0, 0.0, 0.0)
 right_coarse_approach_offset     (0.0, 0.05, 0.0)
 right_precise_approach_direction (0.0, -0.05, 0.0)
+
+[ycb_master_chef_can]
+right_approach_pose              (0.02, 0.09, 0.12, 40.0, 0.0, -80.0)
+right_coarse_approach_offset     (0.0, 0.0, 0.0)
+right_precise_approach_direction (0.0, 0.0, 0.0)
+
+[ycb_extra_large_clamp]
+right_approach_pose              (0.07, -0.01, 0.05, 40.0, 0.0, 0.0)
+right_coarse_approach_offset     (0.0, 0.0, 0.0)
+right_precise_approach_direction (0.0, -0.03, 0.0)
