Add parameter pour_{rotation, translation, traj_time} to default configuration file ofmodule object-tracking-manipulation

--- a/src/object-tracking-manipulation/conf/manipulation_config.ini
+++ b/src/object-tracking-manipulation/conf/manipulation_config.ini
@@ -33,6 +33,10 @@ hand_default_pitch      0.0
 hand_default_roll_left  0.0
 hand_default_roll_right 0.0
 
+pour_rotation           (0.0, 0.0, 0.0)
+pour_translation        (0.0, 0.0, 0.0)
+pour_traj_time          1.5
+
 left_arm_home_pose      (-0.25, -0.27, 0.11, -0.185191, 0.585074, -0.789552, 3.124785)
 left_arm_rest_pose      (-0.0350, -0.2354, -0.1529, 0.655344, -0.019992, -0.755065, 2.438540)
 right_arm_home_pose     (-0.25,  0.27, 0.11, -0.000203, -0.808821, 0.588055, 2.760923)
