Use user provided initial bounding box by default in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -111,7 +111,7 @@ object_name         ycb_mustard_bottle
 [BBOX_ESTIMATOR]
 iol_object_name     Bottle
 iol_bbox_scale      1.3
-use_bbox_0          false
+use_bbox_0          true
 use_bbox_port       false
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
