--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -1,24 +1,22 @@
 [MODE]
 # mode can assume:
 # 'simulation' (using simulated data),
-# 'play'       (using data acquired using data dumper)
-# 'robot'      (using the robot, either real or simulated in Gazebo)
+# 'robot'      (using the robot)
 mode                robot
 robot               icub
 # filter can assume values 'ukf' or 'upf'
 filter_type         upf
 
 [PARTICLES]
-number              9
+number              10
 resample_threshold  0.3
 
 [LIKELIHOOD]
 variance            0.05
 
 [POINT_ESTIMATE]
-# Used in the UPF
-method              emode
-window_size         6
+method              smean
+window_size         3
 
 [INITIAL_CONDITION]
 # Used in the UKF
@@ -59,7 +57,7 @@ beta                2.0
 kappa               0.0
 
 [POINT_CLOUD_PREDICTION]
-number_samples      1000
+number_samples      500
 
 [POINT_CLOUD_FILTERING]
 outlier_threshold   0.1
@@ -69,8 +67,8 @@ outlier_threshold   0.1
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
-u_stride            2
-v_stride            2
+u_stride            3
+v_stride            3
 
 [HAND_OCCLUSION]
 handle_occlusion    true
@@ -113,10 +111,8 @@ iol_object_name     Bottle
 iol_bbox_scale      1.3
 use_bbox_0          true
 use_bbox_port       false
-#bbox_tl_0           (144.0, 65.0)
-#bbox_br_0           (208.0, 162.0)
-bbox_tl_0           (160.0, 100.0)
-bbox_br_0           (245.0, 220.0)
+bbox_tl_0           (148.75, 65.75)
+bbox_br_0           (246.25, 189.25)
 cov_0               (0.001, 0.001, 0.001, 0.001)
 Q                   (0.001, 0.001, 0.001, 0.001)
 R                   (0.001, 0.001, 0.1, 0.1)
@@ -127,4 +123,4 @@ absolute_log_path
 
 [MISC]
 send_hull           true
-send_mask           true
+send_mask           false
