--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,12 @@
+#===============================================================================
+#
+# Copyright (C) 2019 Istituto Italiano di Tecnologia (IIT)
+#
+# This software may be modified and distributed under the terms of the
+# GPL-2+ license. See the accompanying LICENSE file for details.
+#
+#===============================================================================
+
 add_subdirectory(gaze-ctrl-library)
 add_subdirectory(icub-fingers-encoders)
 add_subdirectory(sfm-library)
