--- a/src/gaze-ctrl-library/CMakeLists.txt
+++ b/src/gaze-ctrl-library/CMakeLists.txt
@@ -1,3 +1,12 @@
+#===============================================================================
+#
+# Copyright (C) 2019 Istituto Italiano di Tecnologia (IIT)
+#
+# This software may be modified and distributed under the terms of the
+# GPL-2+ license. See the accompanying LICENSE file for details.
+#
+#===============================================================================
+
 project("iCubGazeCtrlLibrary")
 
 set(LIBRARY_TARGET_NAME ${PROJECT_NAME})
