Update iCub camera configuration file

--- a/src/object-tracking/conf/icub_camera_config.ini
+++ b/src/object-tracking/conf/icub_camera_config.ini
@@ -1,4 +1,4 @@
-[left]
+[left_320_240]
 width  320
 height 240
 fx     234.88
@@ -6,10 +6,26 @@ fy     234.582
 cx     160.77
 cy     123.491
 
-[right]
+[right_320_240]
 width  320
 height 240
 fx     234.666
 fy     234.25
 cx     149.795
 cy     123.059
+
+[left_640_480]
+width  640
+height 480
+fx     0.0
+fy     0.0
+cx     0.0
+cy     0.0
+
+[right_640_480]
+width  640
+height 480
+fx     0.0
+fy     0.0
+cx     0.0
+cy     0.0
