--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -1,4 +1,5 @@
 camera            realsense
+fallback_config   camera_320_240
 period            0.03
 pc_left_z_thr     1.0
 show_hand         true
