Update CMakeLists.txt of module object-tracking
Remove old configuration files and add support for installation of configuration file for in-hand object tracking with iCub @ 320x240

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -210,14 +210,13 @@ endif()
 
 set(${EXE_TARGET_NAME}_CONF
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/analogs_configuration.ini
-    ${CMAKE_CURRENT_SOURCE_DIR}/conf/config.ini
-    ${CMAKE_CURRENT_SOURCE_DIR}/conf/config_simulation.ini
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/config_icub_320_240.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/icub_camera_config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/realsense_camera_config.ini 
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/sfm_config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/springy_calibration_left.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/springy_calibration_right.ini
-    )
+)
 
 set(${EXE_TARGET_NAME}_SHADER_VERT
         ${CMAKE_CURRENT_SOURCE_DIR}/shader/shader_frame.vert
