--- a/src/object-tracking-viewer/conf/icub/config.ini
+++ b/src/object-tracking-viewer/conf/icub/config.ini
@@ -1,7 +1,8 @@
-camera            icub
-fallback_config   left_320_240
-period            0.03
-pc_left_z_thr     1.0
-show_hand         true
-hand_laterality   right
-show_ground_truth true
+camera                    iCubCamera
+object_tracking_config    config_icub_320_240.ini
+fallback_config           left_320_240
+period                    0.03
+pc_left_z_thr             1.0
+show_hand                 true
+hand_laterality           right
+show_ground_truth         true
