--- a/src/object-tracking-viewer/CMakeLists.txt
+++ b/src/object-tracking-viewer/CMakeLists.txt
@@ -31,7 +31,7 @@ find_package(ICUB REQUIRED)
 find_package(SuperimposeMesh 0.9.4.0 QUIET)
 if(NOT SuperimposeMesh_FOUND)
     message(STATUS "Did not found required master release of SuperimposeMesh. Looking for devel version.")
-    find_package(SuperimposeMesh 0.10.100.0 REQUIRED)
+    find_package(SuperimposeMesh 0.10.100 REQUIRED)
 endif()
 
 # VTK
@@ -73,7 +73,7 @@ target_link_libraries(${EXE_TARGET_NAME} PRIVATE
                                          YARP::YARP_sig
                                          YARP::YARP_eigen
                                          iCubGazeCtrlLibrary
-                                         SuperimposeMesh::SuperimposeMesh
+                                         SI::SuperimposeMesh
                                          ${ICUB_LIBRARIES}
                                          iCubFingersEncoders
                                          )
