--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -1,7 +1,6 @@
-camera            realsense
-fallback_config   camera_320_240
-period            0.03
-pc_left_z_thr     1.0
-show_hand         true
-hand_laterality   right
-show_ground_truth true
+camera                     RealsenseCamera
+object_tracking_config     config_realsense_320_240.ini
+fallback_config            camera_320_240
+period                     0.03
+pc_left_z_thr              1.0
+show_ground_truth          false
