Temporary fix in CMakeLists.txt files of modules object-tracking and object-tracking-viewer to avoid issues with 'assimp' and 'glm'.
Last devel of SuperimposeMeshLib introduced some issues due to an interplay between the YCM FindAssimp and assimp CMake configuration file from system library.
Specifically, property INTERFACE_LINK_LIBRARIES of target SI::SuperimposeMesh contains 'assimp::assimp' but, in the end, this is not exported properly
by the YCM FindAssimp. By removing 'assimp::assimp' and by change, we are still able to link against target 'assimp' probably due to the fact that
find_package(assimp) is using the library assimp CMake configuration file.

Property INTERFACE_LINK_LIBRARIES of target SI::SuperimposeMesh also contains glm resulting in ld trying to link against -lglm.
However glm is header only hence linking is not possible.

--- a/src/object-tracking-viewer/CMakeLists.txt
+++ b/src/object-tracking-viewer/CMakeLists.txt
@@ -33,6 +33,8 @@ if(NOT SuperimposeMesh_FOUND)
     message(STATUS "Did not found required master release of SuperimposeMesh. Looking for devel version.")
     find_package(SuperimposeMesh 0.10.100 REQUIRED)
 endif()
+# Temporary fix avoiding issues with 'assimp' and 'glm'
+set_target_properties(SI::SuperimposeMesh PROPERTIES INTERFACE_LINK_LIBRARIES "")
 
 # VTK
 find_package(VTK             REQUIRED)
