Add parameter 'test_superquadrics' to default configuration files of module object-tracking

--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -65,6 +65,7 @@ outlier_threshold   0.1
 
 [POINT_CLOUD_PREDICTION]
 number_samples      500
+test_superquadrics  false
 
 [POINT_ESTIMATE]
 method              smean
