Move to mask configuration @ 640 x 480 in the default configuration file of object-tracking-viewer for R1

--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -1,6 +1,6 @@
 camera                     RealsenseCamera
-object_tracking_config     config_realsense_320_240.ini
-fallback_config            camera_320_240
+object_tracking_config     config_mask_640_480.ini
+fallback_config            camera_640_480
 period                     0.03
 pc_left_z_thr              1.0
 show_ground_truth          false
