--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -19,13 +19,7 @@ if(NOT BayesFilters_FOUND)
 endif()
 
 # Superimpose Mesh
-find_package(SuperimposeMesh 0.9.4.0 QUIET)
-if(NOT SuperimposeMesh_FOUND)
-    message(STATUS "Did not found required master release of SuperimposeMesh. Looking for devel version.")
-    find_package(SuperimposeMesh 0.10.100 REQUIRED)
-endif()
-# Temporary fix avoiding issues with 'assimp' and 'glm'
-set_target_properties(SI::SuperimposeMesh PROPERTIES INTERFACE_LINK_LIBRARIES "")
+find_package(SuperimposeMesh REQUIRED)
 
 # Eigen
 find_package(Eigen3 QUIET CONFIG)
