Add new parameter [POINT_CLOUD_PREDICTION]type

--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -49,8 +49,8 @@ resample_threshold  0.3
 outlier_threshold   0.1
 
 [POINT_CLOUD_PREDICTION]
+type                mesh
 number_samples      500
-test_superquadrics  false
 
 [POINT_ESTIMATE]
 method              smean
