--- a/src/object-tracking/conf/config_realsense_320_240.ini
+++ b/src/object-tracking/conf/config_realsense_320_240.ini
@@ -49,8 +49,9 @@ resample_threshold  0.3
 outlier_threshold   0.1
 
 [POINT_CLOUD_PREDICTION]
+type                mesh
 number_samples      500
-test_superquadrics  false
+use_normals         false
 
 [POINT_ESTIMATE]
 method              smean
