--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -51,7 +51,7 @@ outlier_threshold   0.1
 [POINT_CLOUD_PREDICTION]
 type                mesh
 number_samples      500
-use_normals         false
+use_normals         true
 
 [POINT_ESTIMATE]
 method              smean
