--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -30,6 +30,7 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
+use_superq_guess    false
 
 [KINEMATIC_MODEL]
 q_x                 (0.03, 0.03, 0.03)
