--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -127,7 +127,7 @@ set(${EXE_TARGET_NAME}_SRC
     src/springyFingers.cpp
     )
 
-set(${EXE_TARGET_NAME}_THRIFT_HDR thrift/objecttracking.thrift thrift/modelinitialization.thrift)
+set(${EXE_TARGET_NAME}_THRIFT_HDR thrift/objecttracking.thrift thrift/model.thrift)
 
 yarp_add_idl(${EXE_TARGET_NAME}_THRIFT_SRC ${${EXE_TARGET_NAME}_THRIFT_HDR})
 
