Update default configuration file config_mask_640_480.ini of module object-tracking

--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -10,7 +10,7 @@ fallback_key        camera_640_480
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
-stride              100
+stride              150
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
@@ -19,11 +19,11 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
-use_superq_guess    false
+use_superq_guess    true
 
 [KINEMATIC_MODEL]
-q_x                 (0.005, 0.005, 0.005)
-q_eul               (0.06, 0.06, 0.06)
+q_x                 (0.1, 0.1, 0.1)
+q_eul               (0.5, 0.5, 0.5)
 
 [LIKELIHOOD]
 variance            0.05
@@ -43,15 +43,15 @@ send_hull           false
 object_name         ycb_mustard_bottle
 
 [PARTICLES]
-number              10
+number              5
 resample_threshold  0.3
 
 [POINT_CLOUD_FILTERING]
-outlier_threshold   0.1
+outlier_threshold   0.2
 
 [POINT_CLOUD_PREDICTION]
-type                mesh
-number_samples      500
+type                localize_superquadric
+number_samples      600
 use_normals         false
 
 [POINT_ESTIMATE]
