Add parameter PARTICLES/sample_from_mean in default configuration files of module object-tracking

--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -45,6 +45,7 @@ object_name         ycb_mustard_bottle
 [PARTICLES]
 number              10
 resample_threshold  0.3
+sample_from_mean    false
 
 [POINT_CLOUD_FILTERING]
 outlier_threshold   0.1
