--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -45,6 +45,7 @@ object_name         ycb_mustard_bottle
 [PARTICLES]
 number              5
 resample_threshold  0.3
+sample_from_mean    false
 
 [POINT_CLOUD_FILTERING]
 outlier_threshold   0.2
