Change default configuration file src/object-tracking/conf/config_mask_320_240.ini

--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -19,11 +19,11 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
-use_superq_guess    false
+use_superq_guess    true
 
 [KINEMATIC_MODEL]
-q_x                 (0.005, 0.005, 0.005)
-q_eul               (0.06, 0.06, 0.06)
+q_x                 (0.1, 0.1, 0.1)
+q_eul               (0.5, 0.5, 0.5)
 
 [LIKELIHOOD]
 variance            0.05
