Change default configuration file object-tracking/conf/config_mask_320_240.ini

--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -10,7 +10,9 @@ fallback_key        camera_320_240
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
-stride              10
+# ok for cracker, mustard, domino
+stride              30
+#stride               4
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
@@ -43,17 +45,19 @@ send_hull           false
 object_name         ycb_mustard_bottle
 
 [PARTICLES]
-number              10
+number              5
 resample_threshold  0.3
-sample_from_mean    false
+sample_from_mean    true
 
 [POINT_CLOUD_FILTERING]
-outlier_threshold   0.1
+#good for cracker, mustard, domino
+outlier_threshold   0.2
+#outlier_threshold   0.1
 
 [POINT_CLOUD_PREDICTION]
-type                mesh
+type                localize_superquadric
 number_samples      500
-use_normals         false
+use_normals         true
 
 [POINT_ESTIMATE]
 method              smean
