Change description of option USE_PCL in src/object-tracking/CMakeLists.txt

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -9,7 +9,7 @@
 
 option(USE_OPENMP "Use OpenMP" OFF)
 option(USE_SUPERQUADRICLIB "Use SuperquadricLib" OFF)
-option(USE_PCL "Use SuperquadricLib" OFF)
+option(USE_PCL "Use PointCloudLibrary" OFF)
 
 set(EXE_TARGET_NAME object-tracking)
 
