Update CMakeLists.txt of module object-tracking

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -192,12 +192,13 @@ endif()
 
 
 if (USE_PCL)
-  target_include_directories(${EXE_TARGET_NAME} PRIVATE ${PCL_INCLUDE_DIRS})
   target_link_libraries(${EXE_TARGET_NAME} PRIVATE ${PCL_LIBRARIES})
-  target_compile_definitions(${EXE_TARGET_NAME} PUBLIC ${PCL_DEFINITIONS})
-  target_compile_definitions(CameraLibrary PUBLIC ${PCL_DEFINITIONS})
-  target_compile_options(${EXE_TARGET_NAME} PUBLIC ${PCL_COMPILE_OPTIONS})
-  target_compile_options(CameraLibrary PUBLIC ${PCL_COMPILE_OPTIONS})
+  target_include_directories(${EXE_TARGET_NAME} PRIVATE ${PCL_INCLUDE_DIRS})
+  target_compile_definitions(${EXE_TARGET_NAME} PRIVATE ${PCL_DEFINITIONS})
+  target_compile_options(${EXE_TARGET_NAME} PRIVATE ${PCL_COMPILE_OPTIONS})
+
+  target_compile_definitions(CameraLibrary PRIVATE ${PCL_DEFINITIONS})
+  target_compile_options(CameraLibrary PRIVATE ${PCL_COMPILE_OPTIONS})
 endif()
 
 if (nanoflann_FOUND)
