Change default configuration file of module object-tracking-ground-truth

--- a/src/object-tracking-ground-truth/conf/config.ini
+++ b/src/object-tracking-ground-truth/conf/config.ini
@@ -1,3 +1,16 @@
+[CAMERA]
+camera              iCubCamera
+camera_laterality   left
+# if camera not available it will search
+# within context <fallback_context>
+# for a file <fallback_file>
+# using key <fallback_config>
+# if camera == iCubCamera, fallback_file = icub_camera_config.ini
+# if camera == RealsenseCamera, fallback file = realsense_camera_config.ini
+# TODO: add parameter for fallback_file
+fallback_context    object-tracking-ground-truth
+fallback_config     left_320_240
+
 [INITIAL_CONDITION]
 x_0                 (-0.3, 0.0, 0.0)
 v_0                 (0.0, 0.0, 0.0)
